--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	implementation 'org.modelmapper:modelmapper:3.1.1'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
 	implementation 'com.auth0:java-jwt:4.2.1'
 
 	compileOnly 'org.projectlombok:lombok'
